tests/baselines/reference/constructSignatureAssignabilityInInheritance3.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts(41,19): error TS2430: Interface 'I2<T, U>' incorrectly extends interface 'A'.
  Types of property 'a2' are incompatible.
    Type 'new (x: T) => U[]' is not assignable to type 'new (x: number) => string[]'.
      Types of parameters 'x' and 'x' are incompatible.
        Type 'number' is not assignable to type 'T'.
          'number' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts(50,19): error TS2430: Interface 'I4' incorrectly extends interface 'A'.
  Types of property 'a8' are incompatible.
    Type 'new <T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U' is not assignable to type 'new (x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived'.
      Types of parameters 'y' and 'y' are incompatible.
        Types of parameters 'arg2' and 'arg2' are incompatible.
          Type '{ foo: number; }' is not assignable to type 'Base'.
            Types of property 'foo' are incompatible.
              Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts(66,19): error TS2430: Interface 'I6' incorrectly extends interface 'A'.
  Types of property 'a15' are incompatible.
    Type 'new <T>(x: { a: T; b: T; }) => T' is not assignable to type 'new (x: { a: string; b: number; }) => number'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '{ a: string; b: number; }' is not assignable to type '{ a: string; b: string; }'.
          Types of property 'b' are incompatible.
            Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts(70,19): error TS2430: Interface 'I7' incorrectly extends interface 'A'.
  Types of property 'a15' are incompatible.
    Type 'new <T extends Base>(x: { a: T; b: T; }) => number' is not assignable to type 'new (x: { a: string; b: number; }) => number'.
      Types of parameters 'x' and 'x' are incompatible.
        Type '{ a: string; b: number; }' is not assignable to type '{ a: Base; b: Base; }'.
          Types of property 'a' are incompatible.
            Type 'string' is not assignable to type 'Base'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts(86,19): error TS2430: Interface 'I6' incorrectly extends interface 'B'.
  Types of property 'a2' are incompatible.
    Type 'new <T>(x: T) => string[]' is not assignable to type 'new <T>(x: T) => T[]'.
      Type 'string[]' is not assignable to type 'T[]'.
        Type 'string' is not assignable to type 'T'.
          'string' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts(95,19): error TS2430: Interface 'I7' incorrectly extends interface 'C'.
  Types of property 'a2' are incompatible.
    Type 'new <T>(x: T) => T[]' is not assignable to type 'new <T>(x: T) => string[]'.
      Type 'T[]' is not assignable to type 'string[]'.
        Type 'T' is not assignable to type 'string'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts (6 errors) ====
    // checking subtype relations for function types as it relates to contextual signature instantiation
    // error cases
    
    module Errors {
        class Base { foo: string; }
        class Derived extends Base { bar: string; }
        class Derived2 extends Derived { baz: string; }
        class OtherDerived extends Base { bing: string; }
    
        module WithNonGenericSignaturesInBaseType {
            // base type with non-generic call signatures
            interface A {
                a2: new (x: number) => string[];
                a7: new (x: (arg: Base) => Derived) => (r: Base) => Derived2;
                a8: new (x: (arg: Base) => Derived, y: (arg2: Base) => Derived) => (r: Base) => Derived;
                a10: new (...x: Base[]) => Base;
                a11: new (x: { foo: string }, y: { foo: string; bar: string }) => Base;
                a12: new (x: Array<Base>, y: Array<Derived2>) => Array<Derived>;
                a14: {
                    new (x: number): number[];
                    new (x: string): string[];
                };
                a15: new (x: { a: string; b: number }) => number;
                a16: {
                    // type of parameter is overload set which means we can't do inference based on this type
                    new (x: {
                        new (a: number): number;
                        new (a?: number): number;
                    }): number[];
                    new (x: {
                        new (a: boolean): boolean;
                        new (a?: boolean): boolean;
                    }): boolean[];
                };
            }
    
            interface I extends A {
                a2: new <T, U>(x: T) => U[]; // error, contextual signature instantiation doesn't relate return types so U is {}, not a subtype of string[]
            }
    
            interface I2<T, U> extends A {
                      ~~
!!! error TS2430: Interface '{|I2|0|}<{|T|1|}, {|U|2|}>' incorrectly extends interface '{|A|3|}'.
!!! error TS2430:   Types of property 'a2' are incompatible.
!!! error TS2430:     Type 'new (x: {|T|4|}) => {|U|5|}[]' is not assignable to type 'new (x: number) => string[]'.
!!! error TS2430:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2430:         Type 'number' is not assignable to type '{|T|6|}'.
!!! error TS2430:           'number' is assignable to the constraint of type '{|T|7|}', but '{|T|8|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:41:19
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:41:22
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:41:25
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:12:19
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:41:22
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:41:25
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:41:22
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:41:22
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:41:22
                a2: new (x: T) => U[]; // error, no contextual signature instantiation since I2.a2 is not generic
            }
    
            interface I3 extends A {
                // valid, no inferences for V so it defaults to Derived2
                a7: new <T extends Base, U extends Derived, V extends Derived2>(x: (arg: T) => U) => (r: T) => V;
            }
    
            interface I4 extends A {
                      ~~
!!! error TS2430: Interface '{|I4|0|}' incorrectly extends interface '{|A|1|}'.
!!! error TS2430:   Types of property 'a8' are incompatible.
!!! error TS2430:     Type 'new <{|T|2|} extends {|Base|3|}, {|U|4|} extends {|Derived|5|}>(x: (arg: {|T|6|}) => {|U|7|}, y: (arg2: { {|foo|8|}: number; }) => {|U|9|}) => (r: {|T|10|}) => {|U|11|}' is not assignable to type 'new (x: (arg: {|Base|12|}) => {|Derived|13|}, y: (arg2: {|Base|14|}) => {|Derived|15|}) => (r: {|Base|16|}) => {|Derived|17|}'.
!!! error TS2430:       Types of parameters 'y' and 'y' are incompatible.
!!! error TS2430:         Types of parameters 'arg2' and 'arg2' are incompatible.
!!! error TS2430:           Type '{ {|foo|18|}: number; }' is not assignable to type '{|Base|19|}'.
!!! error TS2430:             Types of property 'foo' are incompatible.
!!! error TS2430:               Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:50:19
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:12:19
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:22
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:38
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:6:11
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:22
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:38
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:87
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:38
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:22
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:38
!!! annotated symbol 12 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
!!! annotated symbol 13 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:6:11
!!! annotated symbol 14 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
!!! annotated symbol 15 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:6:11
!!! annotated symbol 16 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
!!! annotated symbol 17 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:6:11
!!! annotated symbol 18 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:51:87
!!! annotated symbol 19 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
                a8: new <T extends Base, U extends Derived>(x: (arg: T) => U, y: (arg2: { foo: number; }) => U) => (r: T) => U; // error, type mismatch
            }
    
            interface I4B extends A {
                a10: new <T extends Derived>(...x: T[]) => T; // valid, parameter covariance works even after contextual signature instantiation
            }
    
            interface I4C extends A {
                a11: new <T extends Derived>(x: T, y: T) => T; // valid, even though x is a Base, parameter covariance works even after contextual signature instantiation
            }
    
            interface I4E extends A {
                a12: new <T extends Array<Derived2>>(x: Array<Base>, y: Array<Base>) => T; // valid, no inferences for T, defaults to Array<Derived2>
            }
    
            interface I6 extends A {
                      ~~
!!! error TS2430: Interface '{|I6|0|}' incorrectly extends interface '{|A|1|}'.
!!! error TS2430:   Types of property 'a15' are incompatible.
!!! error TS2430:     Type 'new <{|T|2|}>(x: { {|a|3|}: {|T|4|}; {|b|5|}: {|T|6|}; }) => {|T|7|}' is not assignable to type 'new (x: { {|a|8|}: string; {|b|9|}: number; }) => number'.
!!! error TS2430:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2430:         Type '{ {|a|10|}: string; {|b|11|}: number; }' is not assignable to type '{ {|a|12|}: string; {|b|13|}: string; }'.
!!! error TS2430:           Types of property 'b' are incompatible.
!!! error TS2430:             Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:66:19
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:12:19
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:67:23
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:67:31
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:67:23
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:67:37
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:67:23
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:67:23
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:23:28
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:23:39
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:23:28
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:23:39
!!! annotated symbol 12 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:67:31
!!! annotated symbol 13 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:67:37
                a15: new <T>(x: { a: T; b: T }) => T; // error, T is {} which isn't an acceptable return type
            }
    
            interface I7 extends A {
                      ~~
!!! error TS2430: Interface '{|I7|0|}' incorrectly extends interface '{|A|1|}'.
!!! error TS2430:   Types of property 'a15' are incompatible.
!!! error TS2430:     Type 'new <{|T|2|} extends {|Base|3|}>(x: { {|a|4|}: {|T|5|}; {|b|6|}: {|T|7|}; }) => number' is not assignable to type 'new (x: { {|a|8|}: string; {|b|9|}: number; }) => number'.
!!! error TS2430:       Types of parameters 'x' and 'x' are incompatible.
!!! error TS2430:         Type '{ {|a|10|}: string; {|b|11|}: number; }' is not assignable to type '{ {|a|12|}: {|Base|13|}; {|b|14|}: {|Base|15|}; }'.
!!! error TS2430:           Types of property 'a' are incompatible.
!!! error TS2430:             Type 'string' is not assignable to type '{|Base|16|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:70:19
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:12:19
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:71:23
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:71:44
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:71:23
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:71:50
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:71:23
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:23:28
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:23:39
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:23:28
!!! annotated symbol 11 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:23:39
!!! annotated symbol 12 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:71:44
!!! annotated symbol 13 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
!!! annotated symbol 14 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:71:50
!!! annotated symbol 15 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
!!! annotated symbol 16 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:5:11
                a15: new <T extends Base>(x: { a: T; b: T }) => number; // error, T defaults to Base, which is not compatible with number or string
            }
    
            interface I8 extends A {
                // ok, we relate each signature of a16 to b16, and within that, we make inferences from two different signatures in the respective A.a16 signature
                a16: new <T>(x: new (a: T) => T) => T[];
            }
        }
    
        module WithGenericSignaturesInBaseType {
            // base type has generic call signature
            interface B {
                a2: new <T>(x: T) => T[];
            }
    
            interface I6 extends B {
                      ~~
!!! error TS2430: Interface '{|I6|0|}' incorrectly extends interface '{|B|1|}'.
!!! error TS2430:   Types of property 'a2' are incompatible.
!!! error TS2430:     Type 'new <{|T|2|}>(x: {|T|3|}) => string[]' is not assignable to type 'new <{|T|4|}>(x: {|T|5|}) => {|T|6|}[]'.
!!! error TS2430:       Type 'string[]' is not assignable to type '{|T|7|}[]'.
!!! error TS2430:         Type 'string' is not assignable to type '{|T|8|}'.
!!! error TS2430:           'string' is assignable to the constraint of type '{|T|9|}', but '{|T|10|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:86:19
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:82:19
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:87:22
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:87:22
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:83:22
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:83:22
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:83:22
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:83:22
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:83:22
!!! annotated symbol 9 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:83:22
!!! annotated symbol 10 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:83:22
                a2: new <T>(x: T) => string[]; // error
            }
    
            // base type has generic call signature
            interface C {
                a2: new <T>(x: T) => string[];
            }
    
            interface I7 extends C {
                      ~~
!!! error TS2430: Interface '{|I7|0|}' incorrectly extends interface '{|C|1|}'.
!!! error TS2430:   Types of property 'a2' are incompatible.
!!! error TS2430:     Type 'new <{|T|2|}>(x: {|T|3|}) => {|T|4|}[]' is not assignable to type 'new <{|T|5|}>(x: {|T|6|}) => string[]'.
!!! error TS2430:       Type '{|T|7|}[]' is not assignable to type 'string[]'.
!!! error TS2430:         Type '{|T|8|}' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:95:19
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:91:19
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:96:22
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:96:22
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:96:22
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:92:22
!!! annotated symbol 6 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:92:22
!!! annotated symbol 7 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:92:22
!!! annotated symbol 8 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/constructSignatureAssignabilityInInheritance3.ts:92:22
                a2: new <T>(x: T) => T[]; // error
            }
    
            // base type has a generic call signature with overloads
            interface D {
                a14: {
                    new <T extends Derived>(x: T): number[];
                    new <U extends Base>(x: U): number[];
                };
            }
    
            interface I8 extends D {
                a14: new <T extends Base>(x: T) => number[];
            }
        }
    }